updated tests for SortedInts, dynamic memory allocation for the struct made better

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -43,7 +43,7 @@
                 "echo": true,
                 "reveal": "always",
                 "focus": false,
-                "panel": "new",
+                "panel": "shared",
                 "showReuseMessage": true,
                 "clear": false
             },
@@ -122,7 +122,7 @@
                 "echo": true,
                 "reveal": "always",
                 "focus": false,
-                "panel": "new",
+                "panel": "shared",
                 "showReuseMessage": true,
                 "clear": false
             },
