scale mem allocation in powers of 2, added more tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,11 @@
         "*.mcfunction": "mcfunction",
         "stdio.h": "c",
         "c_algorithms.h": "c"
+    },
+    "workbench.colorTheme": "Visual Studio Dark - C++",
+    "editor.tokenColorCustomizations": {
+        "[Visual Studio Dark - C++]": {
+            "comments": "#ffad948f"
+        }
     }
 }
